package com.daniil.booksonline.entity;

public enum OrderStatus {
    CREATED,
    PAID,
    CANCELLED
}

