package com.daniil.booksonline.entity;

public enum ProductType {
    BOOK,
    SOFTWARE_LICENSE,
    VOUCHER
}

